--- a/contact/index.html
+++ b/contact/index.html
@@ -128,22 +128,22 @@
   <!-- contact-->
   <section class="inquiries" id="trial-lesson">
     <div class="access-inquiry contact-inquiry">
-      <div class="inquiry-img">
+      <div class="inquiry-img img-wrap">
         <img class="inquiry-pc-img" src="../images/contact/hp/contact_girls_hp.jpg" alt="">
         <img class="inquiry-sp-img" src="../images/contact/sp/contact_girls_sp.jpg" alt="">
       </div>
       <div class="inquiry-texts">
         <p class="subtitle-top effect-fade">塾の雰囲気を知りたい方</p>
-        <div class="subtitle">
-          <h2 class="effect-fade">無料体験授業／見学</h2>
+        <div class="subtitle effect-fade">
+          <h2>無料体験授業／見学</h2>
         </div>
-        <p class="inquiry-text">お問い合わせいただいた方の９割が参<br class="not-new-line">加している人気の体験授業です。
+        <p class="inquiry-text effect-fade">お問い合わせいただいた方の９割が参<br class="not-new-line">加している人気の体験授業です。
           <br class="not-new-line">今なら１週間無料で実際の授業にご参<br class="not-new-line">加いただけます。
         </p>
-        <p class="inquiry-tel-text">お申し込みはお電話、または下記フォームよりどうぞ</p>
-        <p class="inquiry-tel"><span class="fa fa-phone tel-icon"></span>0178-22-1355</p>
-        <p class="inquiry-tel-time">受付時間 &nbsp;&nbsp;月〜土曜 &nbsp;&nbsp;16:00〜21:30</p>
-        <div class="access-menubar">
+        <p class="inquiry-tel-text effect-fade">お申し込みはお電話、または下記フォームよりどうぞ</p>
+        <p class="inquiry-tel effect-fade"><span class="fa fa-phone tel-icon"></span>0178-22-1355</p>
+        <p class="inquiry-tel-time effect-fade">受付時間 &nbsp;&nbsp;月〜土曜 &nbsp;&nbsp;16:00〜21:30</p>
+        <div class="access-menubar effect-fade">
           <a href="https://forms.gle/xmEyGJiRajPtnMdo7" target="_blank" rel="noopener noreferrer" class="menubar">
             <span>無料体験授業お申込フォーム</span>
           </a>
@@ -152,22 +152,22 @@
     </div>
 
     <div class="access-inquiry contact-inquiry reverse" id="document-request">
-      <div class="inquiry-img">
+      <div class="inquiry-img img-wrap">
         <img class="inquiry-pc-img" src="../images/contact/hp/mother_and_daughter_hp.jpg" alt="">
         <img class="inquiry-sp-img" src="../images/contact/sp/mother_and_daughter_sp.jpg" alt="">
       </div>
       <div class="inquiry-texts">
         <p class="subtitle-top effect-fade">じっくり検討したい方</p>
-        <div class="subtitle">
-          <h2 class="effect-fade">資料請求</h2>
+        <div class="subtitle effect-fade">
+          <h2>資料請求</h2>
         </div>
-        <p class="inquiry-text">塾の詳しい資料を無料でお送りいたし<br class="not-new-line">ます。
+        <p class="inquiry-text effect-fade">塾の詳しい資料を無料でお送りいたし<br class="not-new-line">ます。
           ご不明点やお悩みなどがござい<br class="not-new-line">ましたら、いつでもお気軽にお問い合<br class="not-new-line">わせください。
         </p>
-        <p class="inquiry-tel-text">お申し込みはお電話、または下記フォームよりどうぞ</p>
-        <p class="inquiry-tel"><span class="fa fa-phone tel-icon"></span>0178-22-1355</p>
-        <p class="inquiry-tel-time">受付時間 &nbsp;&nbsp;月〜土曜 &nbsp;&nbsp;16:00〜21:30</p>
-        <div class="access-menubar">
+        <p class="inquiry-tel-text effect-fade">お申し込みはお電話、または下記フォームよりどうぞ</p>
+        <p class="inquiry-tel effect-fade"><span class="fa fa-phone tel-icon"></span>0178-22-1355</p>
+        <p class="inquiry-tel-time effect-fade">受付時間 &nbsp;&nbsp;月〜土曜 &nbsp;&nbsp;16:00〜21:30</p>
+        <div class="access-menubar effect-fade">
           <a href="https://forms.gle/EWrU8XRtF4HRoiAcA" target="_blank" rel="noopener noreferrer" class="menubar">
             <span>資料請求お申込フォーム</span>
           </a>
@@ -176,22 +176,22 @@
     </div>
 
     <div class="access-inquiry contact-inquiry" id="other">
-      <div class="inquiry-img">
+      <div class="inquiry-img img-wrap">
         <img class="inquiry-pc-img" src="../images/contact/hp/parent_and_child_hp.jpg" alt="">
         <img class="inquiry-sp-img" src="../images/contact/sp/parent_and_child_sp.jpg" alt="">
       </div>
       <div class="inquiry-texts">
         <p class="subtitle-top effect-fade">中３講習会、全県テスト関連もこちら</p>
-        <div class="subtitle">
-          <h2 class="effect-fade">その他のお問い合わせ</h2>
+        <div class="subtitle effect-fade">
+          <h2>その他のお問い合わせ</h2>
         </div>
-        <p class="inquiry-text">その他のご質問、中３特別講習会（春<br class="not-new-line">期・夏期・冬期講習）や
+        <p class="inquiry-text effect-fade">その他のご質問、中３特別講習会（春<br class="not-new-line">期・夏期・冬期講習）や
           全県テストに<br class="not-new-line">関するお申し込み・ご相談もこちらか<br class="not-new-line">らお問い合わせください。
         </p>
-        <p class="inquiry-tel-text">お申し込みはお電話、または下記フォームよりどうぞ</p>
-        <p class="inquiry-tel"><span class="fa fa-phone tel-icon"></span>0178-22-1355</p>
-        <p class="inquiry-tel-time">受付時間 &nbsp;&nbsp;月〜土曜 &nbsp;&nbsp;16:00〜21:30</p>
-        <div class="access-menubar">
+        <p class="inquiry-tel-text effect-fade">お申し込みはお電話、または下記フォームよりどうぞ</p>
+        <p class="inquiry-tel effect-fade"><span class="fa fa-phone tel-icon"></span>0178-22-1355</p>
+        <p class="inquiry-tel-time effect-fade">受付時間 &nbsp;&nbsp;月〜土曜 &nbsp;&nbsp;16:00〜21:30</p>
+        <div class="access-menubar effect-fade">
           <a href="https://forms.gle/JnLNwcG2noU912Fo9" target="_blank" rel="noopener noreferrer" class="menubar">
             <span>その他お問い合わせフォーム</span>
           </a>
