--- a/elementary/index.html
+++ b/elementary/index.html
@@ -138,14 +138,14 @@
 
       <div class="policy-item">
         <div class="policy-item-content">
-          <img class="number-pc-img" src="../images/elementary/hp/01_hp.png" alt="数字01">
-          <img class="number-sp-img" src="../images/elementary/sp/01_blue_sp.png" alt="数字01">
+          <img class="number-pc-img effect-fade" src="../images/elementary/hp/01_hp.png" alt="数字01">
+          <img class="number-sp-img effect-fade" src="../images/elementary/sp/01_blue_sp.png" alt="数字01">
           <h3 class="policy-item-title effect-fade">分かりやすく<br class="not-new-line">ていねいに教えます</h3>
-          <p class="policy-item-text">小学校で学ぶ内容は一生の知識のもととなる、とても重要なものばかりです。<br>
+          <p class="policy-item-text effect-fade">小学校で学ぶ内容は一生の知識のもととなる、とても重要なものばかりです。<br>
             塾では教科書に沿って分かりやすくていねいに教え、将来の勉強に必要な学力がしっかり身につくよう、責任を持ってご指導いたします。
           </p>
         </div>
-        <div class="policy-item-img">
+        <div class="policy-item-img img-wrap">
           <img class="policy-item-pc-img" src="../images/elementary/hp/pencil_hp.jpg" alt="鉛筆を持って問題を解く">
           <img class="policy-item-sp-img" src="../images/elementary/sp/pencil_sp.jpg" alt="鉛筆を持って問題を解く">
         </div>
@@ -153,14 +153,14 @@
 
       <div class="policy-item">
         <div class="policy-item-content">
-          <img class="number-pc-img" src="../images/elementary/hp/02_hp.png" alt="数字02">
-          <img class="number-sp-img" src="../images/elementary/sp/02_blue_sp.png" alt="数字02">
+          <img class="number-pc-img effect-fade" src="../images/elementary/hp/02_hp.png" alt="数字02">
+          <img class="number-sp-img effect-fade" src="../images/elementary/sp/02_blue_sp.png" alt="数字02">
           <h3 class="policy-item-title effect-fade">勉強の苦手をなくします</h3>
-          <p class="policy-item-text">小学生の時期に苦手ができると、中学・高校へ行ってからたいへん苦労します。<br>
+          <p class="policy-item-text effect-fade">小学生の時期に苦手ができると、中学・高校へ行ってからたいへん苦労します。<br>
             塾では「DB（データベース）学習システム」を使用してコンピューターでつまずきのポイントを分析、たくさんの問題の中から一人ひとりの弱点にあわせた対策問題を作成して苦手を克服します。
           </p>
         </div>
-        <div class="policy-item-img">
+        <div class="policy-item-img img-wrap">
           <img class="policy-item-pc-img" src="../images/elementary/hp/data_hp.jpg" alt="円グラフや棒グラフのデータ">
           <img class="policy-item-sp-img" src="../images/elementary/sp/data_sp.jpg" alt="円グラフや棒グラフのデータ">
         </div>
@@ -168,14 +168,14 @@
 
       <div class="policy-item">
         <div class="policy-item-content">
-          <img class="number-pc-img" src="../images/elementary/hp/03_hp.png" alt="数字03">
-          <img class="number-sp-img" src="../images/elementary/sp/03_blue_sp.png" alt="数字03">
+          <img class="number-pc-img effect-fade" src="../images/elementary/hp/03_hp.png" alt="数字03">
+          <img class="number-sp-img effect-fade" src="../images/elementary/sp/03_blue_sp.png" alt="数字03">
           <h3 class="policy-item-title effect-fade">基礎力を伸ばし、<br>がんばる力を育てます</h3>
-          <p class="policy-item-text">基礎力がつくと、いろいろな問題が正確にかつ速く解けるようになります。
+          <p class="policy-item-text effect-fade">基礎力がつくと、いろいろな問題が正確にかつ速く解けるようになります。
             塾では重要問題の反復学習に加えて、難易度の高い問題にも挑戦させ、粘り強く考える力を育てます。「分からない」が「分かる」ようになり、学ぶことが楽しくなるようにご指導します。
           </p>
         </div>
-        <div class="policy-item-img">
+        <div class="policy-item-img img-wrap">
           <img class="policy-item-pc-img" src="../images/elementary/hp/wallpaper_green_hp.jpg" alt="壁紙が緑色の教室">
           <img class="policy-item-sp-img" src="../images/elementary/sp/wallpaper_green_sp.jpg" alt="壁紙が緑色の教室">
         </div>
@@ -192,48 +192,50 @@
 
     <div class="schedule-box-img">
       <div class="schedule-box">
-        <p class="schedule-box-text">受けたい科目、曜日、時間を<br class="sp-new-line">ご自由にお選びください</p>
+        <p class="schedule-box-text effect-fade">受けたい科目、曜日、時間を<br class="sp-new-line">ご自由にお選びください</p>
 
         <div class="schedule-box-subject">
-          <p class="subject-menubar">対象科目</p>
-          <p class="subject-content">国・算・英・理社&nbsp;<span class="subject-content-sub">（理科＋社会で１教科扱い）</span></p>
+          <p class="subject-menubar effect-fade">対象科目</p>
+          <p class="subject-content effect-fade">国・算・英・理社&nbsp;<span class="subject-content-sub">（理科＋社会で１教科扱い）</span></p>
         </div>
 
         <div class="schedule-box-day">
-          <p class="schedule-menubar">曜日・時間</p>
+          <p class="schedule-menubar effect-fade">曜日・時間</p>
           <div class="schedule-content">
             <dl>
-              <div class="monday">
+              <div class="monday effect-fade">
                 <dt>月曜日</dt>
                 <dd>17:10〜18:00 &nbsp;または &nbsp;18:10〜19:00</dd>
               </div>
-              <div class="tuesday">
+              <div class="tuesday effect-fade">
                 <dt>火曜日</dt>
                 <dd>17:10〜18:00 &nbsp;または &nbsp;18:10〜19:00</dd>
               </div>
-              <div class="wednesday">
+              <div class="wednesday effect-fade">
                 <dt>水曜日</dt>
                 <dd>17:10〜18:00 &nbsp;または &nbsp;18:10〜19:00</dd>
               </div>
-              <div class="thursday">
+              <div class="thursday effect-fade">
                 <dt>木曜日</dt>
                 <dd>17:10〜18:00 &nbsp;または &nbsp;18:10〜19:00</dd>
               </div>
-              <div class="friday">
+              <div class="friday effect-fade">
                 <dt>金曜日</dt>
                 <dd>17:10〜18:00 &nbsp;または &nbsp;18:10〜19:00</dd>
               </div>
-              <div class="saturday">
+              <div class="saturday effect-fade">
                 <dt>土曜日</dt>
                 <dd>13:30〜14:20 &nbsp;または &nbsp;14:30〜15:20</dd>
               </div>
             </dl>
           </div>
         </div>
-        <p class="schedule-text">（複数の教科を受講する場合は、１日に２教科の受講が可能です）</p>
+        <p class="schedule-text effect-fade">（複数の教科を受講する場合は、１日に２教科の受講が可能です）</p>
       </div>
-      <img class="schedule-item-pc-img" src="../images/elementary/hp/girls_inclass_hp.jpg" alt="授業中の女子小学生">
-      <img class="schedule-item-sp-img" src="../images/elementary/sp/girls_inclass_sp.jpg" alt="授業中の女子小学生">
+      <div class="img-wrap">
+        <img class="schedule-item-pc-img" src="../images/elementary/hp/girls_inclass_hp.jpg" alt="授業中の女子小学生">
+        <img class="schedule-item-sp-img" src="../images/elementary/sp/girls_inclass_sp.jpg" alt="授業中の女子小学生">
+      </div>
     </div>
   </section>
 
@@ -246,25 +248,25 @@
 
     <div class="fee-list">
       <div class="fee-item-01">
-        <p class="fee-menubar">入会費（税抜）</p>
-        <p class="admission-fee">¥8,000</p>
+        <p class="fee-menubar effect-fade">入会費（税抜）</p>
+        <p class="admission-fee effect-fade">¥8,000</p>
 
-        <p class="fee-menubar">授業料（税抜）</p>
+        <p class="fee-menubar effect-fade">授業料（税抜）</p>
         <div class="fee-subject">
           <dl>
-            <div class="subject-01 ele-fee-sub">
+            <div class="subject-01 ele-fee-sub effect-fade">
               <dt>１教科</dt>
               <dd>¥5,000</dd>
             </div>
-            <div class="subject-02 ele-fee-sub">
+            <div class="subject-02 ele-fee-sub effect-fade">
               <dt>２教科</dt>
               <dd>¥8,500</dd>
             </div>
-            <div class="subject-03 ele-fee-sub">
+            <div class="subject-03 ele-fee-sub effect-fade">
               <dt>３教科</dt>
               <dd>¥11,500</dd>
             </div>
-            <div class="subject-04 ele-fee-sub">
+            <div class="subject-04 ele-fee-sub effect-fade">
               <dt>４教科</dt>
               <dd>¥14,000</dd>
             </div>
@@ -274,33 +276,33 @@
 
 
 
-      <div class="fee-item-02">
+      <div class="fee-item-02 img-wrap">
         <img class="fee-item-pc-img" src="../images/elementary/hp/boys_inclass_hp.jpg" alt="授業中の男子小学生">
         <img class="fee-item-sp-img" src="../images/elementary/sp/boys_inclass_sp.jpg" alt="授業中の男子小学生">
       </div>
 
       <div class="fee-item-03">
-        <p class="fee-menubar">年間教材費（税抜）</p>
+        <p class="fee-menubar effect-fade">年間教材費（税抜）</p>
         <div class="fee-material">
           <dl>
-            <div class="material-01">
+            <div class="material-01 effect-fade">
               <dt>国語・算数・英語</dt>
               <dd>各¥2,500</dd>
             </div>
-            <div class="material-02">
+            <div class="material-02 effect-fade">
               <dt>理科・社会セット</dt>
               <dd>¥4,000</dd>
             </div>
           </dl>
         </div>
-        <div class="fee-text">
+        <div class="fee-text effect-fade">
           <p>・別途消費税（10%）がかかります。</p>
           <p>・施設維持費や冷暖房費などの諸経費は、<br>&nbsp;&nbsp;年間を通じて０円です。</p>
           <p>・兄弟姉妹で受講する場合、<br>&nbsp;&nbsp;下のお子さまの授業料が毎月10％OFFとなります。</p>
         </div>
       </div>
 
-      <div class="fee-item-04">
+      <div class="fee-item-04 img-wrap">
         <img class="fee-item-pc-img" src="../images/elementary/hp/e_girl_hp.jpg" alt="女子小学生">
         <img class="fee-item-sp-img" src="../images/elementary/sp/e_girl_sp.jpg" alt="女子小学生">
       </div>
@@ -314,12 +316,12 @@
       <img class="campaign-icon-sp" src="../images/elementary/sp/icon_balloon.png" alt="">
       <h3 class="campaign-title">入会キャンペーン</h3>
     </div>
-    <p class="campaign-text">ただ今、入塾キャンペーン実施中です。<br>
+    <p class="campaign-text effect-fade">ただ今、入塾キャンペーン実施中です。<br>
       キャンペーン期間中は、各種割引の適用がございます。<br>
       さらに、プリンス進学塾オリジナル教材の「小学全漢字学習シート」をプレゼントします！<br>
       キャンペーン内容の詳細はお問い合わせください。<br>
     </p>
-    <div class="access-menubar campaign-menubar">
+    <div class="access-menubar campaign-menubar effect-fade">
       <a href="../contact/index.html#other" class="menubar">
         <span>お問い合わせはこちら</span>
       </a>
