--- a/faq/index.html
+++ b/faq/index.html
@@ -130,7 +130,7 @@
   <section class="questions">
     <div class="question">
       <h2 class="effect-fade"><span class="q-mark">Q1</span>どんな先生が教えていますか？</h2>
-      <p>小学部も中学部も、それぞれ経験豊かな講師が担当しています。（中学部は塾長が担当）<br>
+      <p class="effect-fade">小学部も中学部も、それぞれ経験豊かな講師が担当しています。（中学部は塾長が担当）<br>
         アルバイトの講師はいっさい雇っておりません。<br>
         一人の講師が責任を持って一人ひとりの生徒と向き合っているため、<br class="not-new-line">生徒の性格や学力に応じたきめ細かな指導を行うことができます。
       </p>
@@ -138,16 +138,16 @@
 
     <div class="question">
       <h2 class="effect-fade"><span class="q-mark">Q2</span>授業の曜日や時間を指定でき<span class="new-line">ますか？</span></h2>
-      <p>小学生は、お好きな曜日と時間を自由に選ぶことが可能です。<br>
+      <p class="effect-fade">小学生は、お好きな曜日と時間を自由に選ぶことが可能です。<br>
         中学生は、学年によって曜日と時間が決まっています。<br>
         詳しくは、各時間割ページをご覧ください。
       </p>
       <div class="question-menubar">
-        <a href="../elementary/index.html#ele-schedule" class="menubar">
+        <a href="../elementary/index.html#ele-schedule" class="menubar effect-fade">
           <span>小学生コース時間割</span>
         </a>
 
-        <a href="../juniorhighschool/index.html#juni-schedule" class="menubar">
+        <a href="../juniorhighschool/index.html#juni-schedule" class="menubar effect-fade">
           <span>中学生コース時間割</span>
         </a>
       </div>
@@ -155,7 +155,7 @@
 
     <div class="question">
       <h2 class="effect-fade"><span class="q-mark">Q3</span>中学生は、個別指導も受けられ<span class="new-line">ますか？</span></h2>
-      <p>はい、受けられます。<br>
+      <p class="effect-fade">はい、受けられます。<br>
         当塾の個別指導は最も効果の期待できる「一斉＋個別」の組み合わせになります。<br>
         個別のみの受講はできません。一斉授業の受講生が個別授業を追加することはいつでも可能です。<br>
         個別授業は、英・数・国・社・理から希望の教科を選択し（複数可）、<br class="not-new-line">一斉授業と重ならない曜日に受けることができます。<br>
@@ -165,7 +165,7 @@
 
     <div class="question">
       <h2 class="effect-fade"><span class="q-mark">Q4</span>塾を休んだ場合、代わりの日に<span class="new-line">授業を受けられますか？</span></h2>
-      <p>中学生の個別授業と小学生は受けられます。<br>
+      <p class="effect-fade">中学生の個別授業と小学生は受けられます。<br>
         中学生の一斉授業は学年ごとに時間割が決まっているため受けられませんが、<br class="not-new-line">授業で使ったプリントはすべて次回のために取り置きしています。<br>
         また塾のテキストは解答の他に詳しい解説があり、自分でも勉強できるようになっています。<br>
         分からないところがあっても質問はいつでも受け付けており、<br class="not-new-line">やむを得ずお休みしてしまっても十分カバーできますのでご安心ください。
@@ -174,28 +174,28 @@
 
     <div class="question">
       <h2 class="effect-fade"><span class="q-mark">Q5</span>月の途中からでも入塾可能です<span class="new-line">か？</span></h2>
-      <p>はい、可能です。月の途中から入塾した場合、授業料は割引となります。<br>
+      <p class="effect-fade">はい、可能です。月の途中から入塾した場合、授業料は割引となります。<br>
         詳しい金額につきましては、お問い合わせください。
       </p>
     </div>
 
     <div class="question">
       <h2 class="effect-fade"><span class="q-mark">Q6</span>部活が遅くなったときなど、塾に<span class="new-line">遅刻してもかまいませんか？</span></h2>
-      <p>はい、大丈夫です。塾では、理由があるときは遅刻を認めています。<br>
+      <p class="effect-fade">はい、大丈夫です。塾では、理由があるときは遅刻を認めています。<br>
         大会の前などになると他にも遅れてくる生徒がいますから、<br class="not-new-line">大事な説明はみんなの顔が揃ってからするようにしています。ご安心ください。
       </p>
     </div>
 
     <div class="question">
       <h2 class="effect-fade"><span class="q-mark">Q7</span>兄弟姉妹で通った場合、何か<span class="new-line">特典はありますか？</span></h2>
-      <p>２人目のお子さまから「入会費」が無料になります。<br>
+      <p class="effect-fade">２人目のお子さまから「入会費」が無料になります。<br>
         さらに、上のお子さまが卒業するまで、下のお子さまの毎月の「授業料」が10 % OFFになります。
       </p>
     </div>
 
     <div class="question">
       <h2 class="effect-fade"><span class="q-mark">Q8</span>子供が授業についていけるか<span class="new-line">不安です。</span></h2>
-      <p>ご安心ください。生徒一人ひとりの弱点を克服するため、万全の指導を行っております。<br>
+      <p class="effect-fade">ご安心ください。生徒一人ひとりの弱点を克服するため、万全の指導を行っております。<br>
         分からないところは授業終了後、残って質問することができますし、<br>
         電話やメール、FAXでご自宅からも質問できます。（深夜0時まで受け付けています）<br>
         さらに学習相談や進路相談において、勉強のしかたや学習習慣のつけ方について<br class="not-new-line">各種のアドバイスを行なっています。
@@ -205,18 +205,18 @@
 
   <section>
     <div class="access-inquiry faq-inquiry">
-      <div class="inquiry-img">
+      <div class="inquiry-img img-wrap">
         <img class="inquiry-pc-img" src="../images/faq/hp/3pencils_hp.jpg" alt="">
         <img class="inquiry-sp-img" src="../images/faq/sp/3pencils_sp.jpg" alt="">
       </div>
       <div class="inquiry-texts">
-        <p class="inquiry-text">その他のご質問、<br>
+        <p class="inquiry-text effect-fade">その他のご質問、<br>
           ご相談やお悩みなど<br>
           お気軽にお問い合わせください
         </p>
-        <p class="inquiry-tel"><span class="fa fa-phone tel-icon"></span>0178-22-1355</p>
-        <p class="inquiry-tel-time">受付時間 &nbsp;月〜土曜 &nbsp;16:00〜21:30</p>
-        <div class="access-menubar">
+        <p class="inquiry-tel effect-fade"><span class="fa fa-phone tel-icon"></span>0178-22-1355</p>
+        <p class="inquiry-tel-time effect-fade">受付時間 &nbsp;月〜土曜 &nbsp;16:00〜21:30</p>
+        <div class="access-menubar effect-fade">
           <a href="../contact/index.html#other" class="menubar">
             <span>お問い合わせフォームはこちら</span>
           </a>
