--- a/index.html
+++ b/index.html
@@ -163,22 +163,22 @@
       </div>
 
       <div class="inquiry-texts">
-        <div class="subtitle">
-          <h2 class="effect-fade">プリンス進学塾について</h2>
+        <div class="subtitle effect-fade">
+          <h2>プリンス進学塾について</h2>
         </div>
-        <p class="inquiry-text">八戸市二十三日町にある、<br>
+        <p class="inquiry-text effect-fade">八戸市二十三日町にある、<br>
           小中学生を対象とした小さな学習塾です。<br>
           わかりやすく効果的な学習法を追究し、<br>
           これまで1000人以上の生徒を<br class="sp-new-line">志望校に合格させてきました。<br>
           未来にはばたく子どもたちの夢の実現のために、<br>
           教師も生徒も、共にがんばっています。
         </p>
-        <div class="access-menubar">
+        <div class="access-menubar effect-fade">
           <a href="about/index.html#about-feature" class="menubar">
             <span>特徴</span>
           </a>
         </div>
-        <div class="access-menubar">
+        <div class="access-menubar effect-fade">
           <a href="about/index.html#about-greeting" class="menubar">
             <span>塾長あいさつ</span>
           </a>
@@ -190,16 +190,18 @@
 
   <!-- course -->
   <section class="home-course">
-    <div class="subtitle">
-      <h2 class="effect-fade">コース</h2>
+    <div class="subtitle effect-fade">
+      <h2>コース</h2>
     </div>
     <p class="home-course-text">小４〜中３まで</p>
 
-    <div class="home-elementary effect-fade">
-      <img class="course-pc-img" src="images/home/hp/e_boy_hp.jpg" alt="">
-      <img class="course-sp-img" src="images/home/sp/e_boy_sp.jpg" alt="">
+    <div class="home-elementary">
+      <div class="course-img img-wrap">
+        <img class="course-pc-img" src="images/home/hp/e_boy_hp.jpg" alt="">
+        <img class="course-sp-img" src="images/home/sp/e_boy_sp.jpg" alt="">
+      </div>
 
-      <div class="access-menubar effect-fade">
+      <div class="access-menubar">
         <a href="elementary/index.html" class="menubar">
           <span>小学生の方へ</span>
           <span>指導方針、時間割、料金はこちら</span>
@@ -207,11 +209,13 @@
       </div>
     </div>
 
-    <div class="home-juniorhischool effect-fade">
-      <img class="course-pc-img" src="images/home/hp/j_girl_hp.jpg" alt="">
-      <img class="course-sp-img" src="images/home/sp/j_girl_sp.jpg" alt="">
+    <div class="home-juniorhischool">
+      <div class="course-img img-wrap">
+        <img class="course-pc-img" src="images/home/hp/j_girl_hp.jpg" alt="">
+        <img class="course-sp-img" src="images/home/sp/j_girl_sp.jpg" alt="">
+      </div>
 
-      <div class="access-menubar effect-fade">
+      <div class="access-menubar">
         <a href="juniorhighschool/index.html" class="menubar">
           <span>中学生の方へ</span>
           <span>指導方針、時間割、料金はこちら</span>
@@ -223,10 +227,10 @@
 
   <!-- access -->
   <section class="home-access">
-    <div class="subtitle">
-      <h2 class="effect-fade">アクセス</h2>
+    <div class="subtitle effect-fade">
+      <h2>アクセス</h2>
     </div>
-    <p class="home-access-text">031-0041 &nbsp;青森県八戸市二十三日町14<br>
+    <p class="home-access-text effect-fade">031-0041 &nbsp;青森県八戸市二十三日町14<br>
       TEL &nbsp;&nbsp;0178-22-1355<br>
       FAX &nbsp;&nbsp;0178-72-1132<br>
       受付時間 &nbsp;月〜土曜 &nbsp;16:00〜21:30
@@ -242,16 +246,16 @@
 
   <!-- notice -->
   <section class="home-notice">
-    <div class="subtitle">
-      <h2 class="effect-fade">おしらせ</h2>
+    <div class="subtitle effect-fade">
+      <h2>おしらせ</h2>
     </div>
 
-    <p class="home-notice-text">最新のおしらせや、中３特別講習会・全県テストの情報はFacebookにて公開しています。<br>
+    <p class="home-notice-text effect-fade">最新のおしらせや、中３特別講習会・全県テストの情報はFacebookにて公開しています。<br>
       お申し込み・ご質問は、下記ページよりお問い合わせください。
     </p>
 
     <div class="home-notice-list">
-      <div class="home-notice-sns effect-fade">
+      <div class="home-notice-sns">
         <img class="course-pc-img" src="images/home/hp/test_hp.jpg" alt="">
         <img class="course-sp-img" src="images/home/sp/test_sp.jpg" alt="">
         <div class="access-menubar">
@@ -262,7 +266,7 @@
         </div>
       </div>
 
-      <div class="home-notice-contact effect-fade">
+      <div class="home-notice-contact">
         <img class="course-pc-img" src="images/home/hp/studying_text_hp.jpg" alt="">
         <img class="course-sp-img" src="images/home/sp/studying_text_sp.jpg" alt="">
         <div class="access-menubar">
