--- a/juniorhighschool/index.html
+++ b/juniorhighschool/index.html
@@ -126,7 +126,7 @@
   </section>
   <!-- /eyechatch -->
 
-  <!-- elementary -->
+  <!-- juniorhighschool -->
   <section class="policy" id="juni-policy">
     <div class="subtitle">
       <h2 class="effect-fade">指導方針</h2>
@@ -137,14 +137,14 @@
 
       <div class="policy-item">
         <div class="policy-item-content">
-          <img class="number-pc-img" src="../images/juniorhighschool/hp/01_hp.png" alt="数字01">
-          <img class="number-sp-img" src="../images/juniorhighschool/sp/01_blue_sp.png" alt="数字01">
+          <img class="number-pc-img effect-fade" src="../images/juniorhighschool/hp/01_hp.png" alt="数字01">
+          <img class="number-sp-img effect-fade" src="../images/juniorhighschool/sp/01_blue_sp.png" alt="数字01">
           <h3 class="policy-item-title effect-fade">万全の定期テストと受験対策</h3>
-          <p class="policy-item-text">中１・中２・中３とも、定期テスト時にはそれぞれの学校のテスト範囲にピッタリ合わせた予想問題を出題します。一人ひとりの弱点対策問題とあわせて、効率よくテスト勉強をすることができます。<br>
+          <p class="policy-item-text effect-fade">中１・中２・中３とも、定期テスト時にはそれぞれの学校のテスト範囲にピッタリ合わせた予想問題を出題します。一人ひとりの弱点対策問題とあわせて、効率よくテスト勉強をすることができます。<br>
             また高校受験期になると、出題頻度・重要度の高い問題に焦点を絞って徹底した受験指導を行い、志望校合格のために万全を期します。
           </p>
         </div>
-        <div class="policy-item-img">
+        <div class="policy-item-img img-wrap">
           <img class="policy-item-pc-img" src="../images/juniorhighschool/hp/wallpaper_green_hp.jpg" alt="鉛筆を持って問題を解く">
           <img class="policy-item-sp-img" src="../images/juniorhighschool/sp/wallpaper_green_sp.jpg" alt="鉛筆を持って問題を解く">
         </div>
@@ -152,14 +152,14 @@
 
       <div class="policy-item">
         <div class="policy-item-content">
-          <img class="number-pc-img" src="../images/juniorhighschool/hp/02_hp.png" alt="数字02">
-          <img class="number-sp-img" src="../images/juniorhighschool/sp/02_blue_sp.png" alt="数字02">
+          <img class="number-pc-img effect-fade" src="../images/juniorhighschool/hp/02_hp.png" alt="数字02">
+          <img class="number-sp-img effect-fade" src="../images/juniorhighschool/sp/02_blue_sp.png" alt="数字02">
           <h3 class="policy-item-title effect-fade">基礎と応用の定着化</h3>
-          <p class="policy-item-text">過去の入試問題を詳細に分析し塾独自に開発した暗記シートやトレーニングシートを、授業に活用しています。<br>
+          <p class="policy-item-text effect-fade">過去の入試問題を詳細に分析し塾独自に開発した暗記シートやトレーニングシートを、授業に活用しています。<br>
             重要問題を反復して演習することにより、問題を速く正確に解く基礎力と、難易度の高い問題を粘り強く解く応用力を強化します。
           </p>
         </div>
-        <div class="policy-item-img">
+        <div class="policy-item-img img-wrap">
           <img class="policy-item-pc-img" src="../images/juniorhighschool/hp/pencil_hp.jpg" alt="壁紙が緑色の教室">
           <img class="policy-item-sp-img" src="../images/juniorhighschool/sp/pencil_sp.jpg" alt="壁紙が緑色の教室">
         </div>
@@ -167,14 +167,14 @@
 
       <div class="policy-item">
         <div class="policy-item-content">
-          <img class="number-pc-img" src="../images/juniorhighschool/hp/03_hp.png" alt="数字03">
-          <img class="number-sp-img" src="../images/juniorhighschool/sp/03_blue_sp.png" alt="数字03">
+          <img class="number-pc-img effect-fade" src="../images/juniorhighschool/hp/03_hp.png" alt="数字03">
+          <img class="number-sp-img effect-fade" src="../images/juniorhighschool/sp/03_blue_sp.png" alt="数字03">
           <h3 class="policy-item-title effect-fade">苦手の発見と克服</h3>
-          <p class="policy-item-text">中学生の勉強は、どうしても自分の好きなところ、学習しやすいところに偏りがちです。<br>
+          <p class="policy-item-text effect-fade">中学生の勉強は、どうしても自分の好きなところ、学習しやすいところに偏りがちです。<br>
             塾では「DB（データベース）学習システム」を使用してコンピューターでつまずきのポイントを分析、およそ32万の問題から一人ひとりの弱点に合わせた対策問題を作成して苦手を克服します。
           </p>
         </div>
-        <div class="policy-item-img">
+        <div class="policy-item-img img-wrap">
           <img class="policy-item-pc-img" src="../images/juniorhighschool/hp/data_hp.jpg" alt="円グラフや棒グラフのデータ">
           <img class="policy-item-sp-img" src="../images/juniorhighschool/sp/data_sp.jpg" alt="円グラフや棒グラフのデータ">
         </div>
@@ -191,13 +191,13 @@
 
     <div class="schedule-box-img junior-schedule-box-img">
       <div class="schedule-box">
-        <p class="schedule-box-text">５教科×週２日<br class="sp-new-line">（国語・数学・英語・理科・社会）</p>
+        <p class="schedule-box-text effect-fade">５教科×週２日<br class="sp-new-line">（国語・数学・英語・理科・社会）</p>
 
         <div class="schedule-box-day junior-schedule">
-          <p class="schedule-menubar junior-menubar-01">中１</p>
+          <p class="schedule-menubar junior-menubar-01 effect-fade">中１</p>
           <div class="schedule-content junior-content">
             <dl>
-              <div class="junior-schedule-01">
+              <div class="junior-schedule-01 effect-fade">
                 <dt>月・木</dt>
                 <dd>19:20〜21:10</dd>
               </div>
@@ -206,10 +206,10 @@
         </div>
 
         <div class="schedule-box-day junior-schedule">
-          <p class="schedule-menubar junior-menubar-02">中２</p>
+          <p class="schedule-menubar junior-menubar-02 effect-fade">中２</p>
           <div class="schedule-content junior-content">
             <dl>
-              <div class="junior-schedule-02">
+              <div class="junior-schedule-02 effect-fade">
                 <dt>水・土</dt>
                 <dd>19:20〜21:10</dd>
               </div>
@@ -218,20 +218,22 @@
         </div>
 
         <div class="schedule-box-day junior-schedule">
-          <p class="schedule-menubar junior-menubar-03">中３</p>
+          <p class="schedule-menubar junior-menubar-03 effect-fade">中３</p>
           <div class="schedule-content junior-content">
             <dl>
-              <div class="junior-schedule-03">
+              <div class="junior-schedule-03 effect-fade">
                 <dt>火・金</dt>
                 <dd>19:20〜21:10</dd>
               </div>
             </dl>
           </div>
         </div>
-        <p class="junior-schedule-text">教科ごとの授業時間の内訳は、<br class="not-new-line">数学：70分、英語：70分、理科：40分、国語・社会：40分（隔週）です。</p>
+        <p class="junior-schedule-text effect-fade">教科ごとの授業時間の内訳は、<br class="not-new-line">数学：70分、英語：70分、理科：40分、国語・社会：40分（隔週）です。</p>
       </div>
-      <img class="schedule-item-pc-img" src="../images/juniorhighschool/hp/students_inclass_hp.jpg" alt="問題を解く中学生">
-      <img class="schedule-item-sp-img" src="../images/juniorhighschool/sp/students_inclass_sp.jpg" alt="問題を解く中学生">
+      <div class="img-wrap">
+        <img class="schedule-item-pc-img" src="../images/juniorhighschool/hp/students_inclass_hp.jpg" alt="問題を解く中学生">
+        <img class="schedule-item-sp-img" src="../images/juniorhighschool/sp/students_inclass_sp.jpg" alt="問題を解く中学生">
+      </div>
     </div>
   </section>
 
@@ -244,17 +246,17 @@
 
     <div class="fee-list">
       <div class="fee-item-01">
-        <p class="fee-menubar">入会費（税抜）</p>
-        <p class="admission-fee">¥15,000</p>
+        <p class="fee-menubar effect-fade">入会費（税抜）</p>
+        <p class="admission-fee effect-fade">¥15,000</p>
 
-        <p class="fee-menubar">授業料（税抜）</p>
+        <p class="fee-menubar effect-fade">授業料（税抜）</p>
         <div class="fee-subject">
           <dl>
-            <div class="subject-01 junior-subject-01">
+            <div class="subject-01 junior-subject-01 effect-fade">
               <dt>中１・中２</dt>
               <dd>¥18,000</dd>
             </div>
-            <div class="subject-02 junior-subject-02">
+            <div class="subject-02 junior-subject-02 effect-fade">
               <dt>中３</dt>
               <dd>¥20,000</dd>
             </div>
@@ -264,26 +266,26 @@
 
 
 
-      <div class="fee-item-02">
+      <div class="fee-item-02 img-wrap">
         <img class="fee-item-pc-img" src="../images/juniorhighschool/hp/questions_boy_hp.jpg" alt="先生に質問する男子中学生">
         <img class="fee-item-sp-img" src="../images/juniorhighschool/sp/questions_boy_sp.jpg" alt="先生に質問する男子中学生">
       </div>
 
       <div class="fee-item-03">
-        <p class="fee-menubar">年間教材費（税抜）</p>
+        <p class="fee-menubar effect-fade">年間教材費（税抜）</p>
         <div class="fee-material">
           <dl>
-            <div class="material-01 junior-material-01">
+            <div class="material-01 junior-material-01 effect-fade">
               <dt>中１・中２</dt>
               <dd>¥16,000</dd>
             </div>
-            <div class="material-02 junior-material-02">
+            <div class="material-02 junior-material-02 effect-fade">
               <dt>中３</dt>
               <dd>¥20,000</dd>
             </div>
           </dl>
         </div>
-        <div class="junior-fee-text">
+        <div class="junior-fee-text effect-fade">
           <p>・別途消費税（10%）がかかります。</p>
           <p>・施設維持費や冷暖房費などの諸経費は、<br>&nbsp;&nbsp;年間を通じて０円です。</p>
           <p>・兄弟姉妹で受講する場合、<br>&nbsp;&nbsp;下のお子さまの授業料が毎月10％オフとなります。</p>
@@ -292,7 +294,7 @@
         </div>
       </div>
 
-      <div class="fee-item-04">
+      <div class="fee-item-04 img-wrap">
         <img class="fee-item-pc-img" src="../images/juniorhighschool/hp/j_girl_hp.jpg" alt="女子中学生">
         <img class="fee-item-sp-img" src="../images/juniorhighschool/sp/j_girl_sp.jpg" alt="女子中学生">
       </div>
@@ -306,17 +308,17 @@
       <img class="campaign-icon-sp" src="../images/juniorhighschool/sp/icon_balloon.png" alt="">
       <h3 class="campaign-title">入会キャンペーン</h3>
     </div>
-    <p class="campaign-text">ただ今、入塾キャンペーン実施中です。<br>
+    <p class="campaign-text effect-fade">ただ今、入塾キャンペーン実施中です。<br>
       キャンペーン期間中は、各種割引の適用がございます。<br>
       さらに、プリンス進学塾オリジナル教材の「基本１００英文暗記シート」と「歴史暗記シート」をプレゼントします！キャンペーン内容の詳細はお問い合わせください。
     </p>
-    <div class="access-menubar campaign-menubar">
+    <div class="access-menubar campaign-menubar effect-fade">
       <a href="../contact/index.html#other" class="menubar">
         <span>お問い合わせはこちら</span>
       </a>
     </div>
   </section>
-  <!-- /elementary -->
+  <!-- /juniorhighschool -->
 </main>
 
 <!-- footer -->
