--- a/access/index.html
+++ b/access/index.html
@@ -135,13 +135,13 @@
       </div>
     </div>
     <div class="access-texts">
-      <div class="access-text">
+      <div class="access-text effect-fade">
         <p>031-0041 &nbsp;青森県八戸市二十三日町14<br>
           TEL &nbsp;&nbsp;0178-22-1355<br>
           FAX &nbsp;&nbsp;0178-72-1132<br>
           受付時間 &nbsp;&nbsp;月〜土曜 &nbsp;16:00〜21:30</p>
       </div>
-      <div class="access-menubar">
+      <div class="access-menubar effect-fade">
         <a href="https://www.google.co.jp/maps/place/%E3%83%97%E3%83%AA%E3%83%B3%E3%82%B9%E9%80%B2%E5%AD%A6%E5%A1%BE/@40.5077064,141.4846764,17z/data=!3m1!4b1!4m5!3m4!1s0x5f9b520991f652c3:0x1f79258b713c7165!8m2!3d40.5077064!4d141.4868651?hl=ja" class="menubar" target="_blank" rel="noopener noreferrer">
           <span>Google mapを見る</span>
         </a>
@@ -151,20 +151,20 @@
 
   <section>
     <div class="access-inquiry">
-      <div class="inquiry-img">
+      <div class="inquiry-img img-wrap">
         <img class="inquiry-pc-img" src="../images/access/hp/prince_entrance_hp.jpg" alt="">
         <img class="inquiry-sp-img" src="../images/access/sp/prince_entrance_sp.jpg" alt="">
       </div>
  
       <div class="inquiry-texts">
-        <p class="inquiry-text">入会に関するご質問、<br>
+        <p class="inquiry-text effect-fade">入会に関するご質問、<br>
         学習に関するご相談など<br>
         お気軽にお問い合わせください</p>
 
-        <p class="inquiry-tel"><span class="fa fa-phone tel-icon"></span>0178-22-1355</p>
-        <p class="inquiry-tel-time">受付時間 &nbsp;月〜土曜 &nbsp;16:00〜21:30</p>
+        <p class="inquiry-tel effect-fade"><span class="fa fa-phone tel-icon"></span>0178-22-1355</p>
+        <p class="inquiry-tel-time effect-fade">受付時間 &nbsp;月〜土曜 &nbsp;16:00〜21:30</p>
  
-        <div class="access-menubar">
+        <div class="access-menubar effect-fade">
           <a href="../contact/index.html#other" class="menubar">
             <span>お問い合わせフォームはこちら</span>
           </a>
