--- a/index.html
+++ b/index.html
@@ -155,12 +155,13 @@
   <!-- /eyechatch -->
 
   <!-- about -->
-  <section>
-    <div class="home-about">
-      <div class="inquiry-img">
+  <section class="home-about">
+    <div class="home-inquiry">
+      <div class="inquiry-img img-wrap">
         <img class="inquiry-pc-img" src="images/home/hp/desk_hp.jpg" alt="">
         <img class="inquiry-sp-img" src="images/home/sp/desk_sp.jpg" alt="">
       </div>
+       
 
       <div class="inquiry-texts">
         <div class="subtitle effect-fade">
@@ -201,7 +202,7 @@
         <img class="course-sp-img" src="images/home/sp/e_boy_sp.jpg" alt="">
       </div>
 
-      <div class="access-menubar">
+      <div class="access-menubar effect-fade">
         <a href="elementary/index.html" class="menubar">
           <span>小学生の方へ</span>
           <span>指導方針、時間割、料金はこちら</span>
@@ -215,7 +216,7 @@
         <img class="course-sp-img" src="images/home/sp/j_girl_sp.jpg" alt="">
       </div>
 
-      <div class="access-menubar">
+      <div class="access-menubar effect-fade">
         <a href="juniorhighschool/index.html" class="menubar">
           <span>中学生の方へ</span>
           <span>指導方針、時間割、料金はこちら</span>
@@ -256,20 +257,32 @@
 
     <div class="home-notice-list">
       <div class="home-notice-sns">
-        <img class="course-pc-img" src="images/home/hp/test_hp.jpg" alt="">
-        <img class="course-sp-img" src="images/home/sp/test_sp.jpg" alt="">
-        <div class="access-menubar">
+        <div class="home-course-img img-wrap">
+          <img class="course-pc-img" src="images/home/hp/test_hp.jpg" alt="">
+          <img class="course-sp-img" src="images/home/sp/test_sp.jpg" alt="">
+        </div>
+        <div class="access-menubar effect-fade">
           <a href="https://www.facebook.com/prince.hachinohe" target="_blank" rel="noopener noreferrer" class="menubar">
-            <span>プリンス進学塾</span>
-            <span>公式facebook</span>
+            <div class="facebook-menu">
+              <div class="home-facebook">
+                <img class="home-facebook-icon-pc" src="images/common/hp/facebook_white.png" alt="">
+                <img class="home-facebook-icon-sp" src="images/common/sp/facebook_white.png" alt="">
+              </div>
+              <div class="home-notice-sns-text">
+                <p>プリンス進学塾<br>
+                  公式facebook</p>
+              </div>
+           </div>
           </a>
         </div>
       </div>
 
       <div class="home-notice-contact">
-        <img class="course-pc-img" src="images/home/hp/studying_text_hp.jpg" alt="">
-        <img class="course-sp-img" src="images/home/sp/studying_text_sp.jpg" alt="">
-        <div class="access-menubar">
+        <div class="home-course-img img-wrap">
+          <img class="course-pc-img" src="images/home/hp/studying_text_hp.jpg" alt="">
+          <img class="course-sp-img" src="images/home/sp/studying_text_sp.jpg" alt="">
+        </div>
+        <div class="access-menubar effect-fade">
           <a href="contact/index.html#other" class="menubar"><span>お問い合わせはこちら</span></a>
         </div>
       </div>
