--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
           <img class="course-pc-img" src="images/home/hp/test_hp.jpg" alt="">
           <img class="course-sp-img" src="images/home/sp/test_sp.jpg" alt="">
         </div>
-        <div class="access-menubar effect-fade">
+        <div class="access-menubar">
           <a href="https://www.facebook.com/prince.hachinohe" target="_blank" rel="noopener noreferrer" class="menubar">
             <div class="facebook-menu">
               <div class="home-facebook">
@@ -282,7 +282,7 @@
           <img class="course-pc-img" src="images/home/hp/studying_text_hp.jpg" alt="">
           <img class="course-sp-img" src="images/home/sp/studying_text_sp.jpg" alt="">
         </div>
-        <div class="access-menubar effect-fade">
+        <div class="access-menubar">
           <a href="contact/index.html#other" class="menubar"><span>お問い合わせはこちら</span></a>
         </div>
       </div>
