--- a/about/index.html
+++ b/about/index.html
@@ -118,7 +118,7 @@
 <main>
   <!-- eyechatch -->
   <section class="eyechatch">
-    <div class="eyechatch-inner">
+    <div class="eyechatch-inner img-wrap">
       <img class="eyechatch-pc-img" src="../images/about/hp/mv_classroom_hp.jpg" alt="教室">
       <img class="eyechatch-sp-img" src="../images/about/sp/mv_classroom_sp.jpg" alt="教室">
       <h1 class="eyechatch-text about">プリンス進学塾に<br>ついて</h1>
