--- a/access/index.html
+++ b/access/index.html
@@ -118,7 +118,7 @@
 <main>
   <!-- eyechatch -->
   <section class="eyechatch">
-    <div class="eyechatch-inner">
+    <div class="eyechatch-inner img-wrap">
       <img class="eyechatch-pc-img" src="../images/access/hp/mv_clock_hp.jpg" alt="">
       <img class="eyechatch-sp-img" src="../images/access/sp/mv_clock_sp.jpg" alt="">
       <h1 class="eyechatch-text">アクセス</h1>
