--- a/elementary/index.html
+++ b/elementary/index.html
@@ -119,7 +119,7 @@
 <main>
   <!-- eyechatch -->
   <section class="eyechatch">
-    <div class="eyechatch-inner">
+    <div class="eyechatch-inner img-wrap">
       <img class="eyechatch-pc-img" src="../images/elementary/hp/mv_boy_hp.jpg" alt="授業を受ける男子小学生">
       <img class="eyechatch-sp-img" src="../images/elementary/sp/mv_boy_sp.jpg" alt="授業を受ける男子小学生">
       <h1 class="eyechatch-text">小学生</h1>
