--- a/faq/index.html
+++ b/faq/index.html
@@ -118,7 +118,7 @@
 <main>
   <!-- eyechatch -->
   <section class="eyechatch">
-    <div class="eyechatch-inner">
+    <div class="eyechatch-inner img-wrap">
       <img class="eyechatch-pc-img" src="../images/faq/hp/mv_ringnote_hp.jpg" alt="">
       <img class="eyechatch-sp-img" src="../images/faq/sp/mv_ringnote_sp.jpg" alt="">
       <h1 class="eyechatch-text faq">よくあるご質問</h1>
