--- a/juniorhighschool/index.html
+++ b/juniorhighschool/index.html
@@ -118,7 +118,7 @@
 <main>
   <!-- eyechatch -->
   <section class="eyechatch" id="top">
-    <div class="eyechatch-inner">
+    <div class="eyechatch-inner img-wrap">
       <img class="eyechatch-pc-img" src="../images/juniorhighschool/hp/mv_girl_hp.jpg" alt="授業を受ける女子中学生">
       <img class="eyechatch-sp-img" src="../images/juniorhighschool/sp/mv_girl_sp.jpg" alt="授業を受ける女子中学生">
       <h1 class="eyechatch-text">中学生</h1>
