--- a/contact/index.html
+++ b/contact/index.html
@@ -117,7 +117,7 @@
 <main>
   <!-- eyechatch -->
   <section class="eyechatch" id="top">
-    <div class="eyechatch-inner">
+    <div class="eyechatch-inner img-wrap">
       <img class="eyechatch-pc-img" src="../images/contact/hp/mv_notes_hp.jpg" alt="">
       <img class="eyechatch-sp-img" src="../images/contact/sp/mv_notes_sp.jpg" alt="">
       <h1 class="eyechatch-text">お問い合わせ</h1>
